# Video-Checker

./: CHANGELOG.md  LICENSE.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
installer/: build_installer.md  rdvc_installer.nsi
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/android/: mod.rs
src-tauri/src/scanner/: ai.rs  cache.rs  media.rs  mod.rs  recover.rs
src/components/: AndroidFolderPicker.tsx  HeaderLogo.tsx  HeroPanel.tsx  ProgressSection.tsx  ScanToolbar.tsx  StatsPanel.tsx  TreePanel.tsx  folder-tree.tsx  headerLogo.css
src/components/folder-tree/: FolderTree.tsx  FolderTreeNode.tsx  LazyFolderTree.tsx  VirtualFolderTree.tsx
src/components/tree-panel/: AiAnalysisPanel.tsx  BarChartCard.tsx  ControlPanel.tsx  InfoModal.tsx  InfoTip.tsx  IntelligencePanel.tsx  RecoveryPanel.tsx  SettingsPanel.tsx
src/components/updater/: UpdateModal.tsx  UpdateWidget.tsx
src/hooks/: useLazyTree.ts  useScan.ts  useUpdater.ts
src/lib/: analysis-utils.ts  android-api.ts  format.ts  tree.ts
src/types/: android.ts  lazy-tree.ts  panel-settings.ts  scan.ts  updater.ts
